--- a/Struct.html
+++ b/Struct.html
@@ -28,7 +28,7 @@
         <select name="category" id="category">
             <option value="mathe">Mathe</option>
             <option value="physik">Physik</option>
-            <option value="generelles-wissen">Generelles Wissen</option>
+            <option value="generellesWissen">Generelles Wissen</option>
             <option value="geography">Geopgraphy</option>
         </select>
     </div>
