--- a/Struct.html
+++ b/Struct.html
@@ -48,11 +48,11 @@
         </form>
 
         <div id="answer">
-            <button id="1" onclick="checkAnswer()">Answer 1</button>
+            <button id="1">Answer 1</button>
 
-            <button id="2"onclick="checkAnswer()">Answer 2</button>
-            <button id="3"onclick="checkAnswer()">Answer 3</button>
-            <button id="4"onclick="checkAnswer()">Answer 4</button>
+            <button id="2">Answer 2</button>
+            <button id="3">Answer 3</button>
+            <button id="4">Answer 4</button>
         </div>
         <p id ="text"> Wähle die passende Antwort!</p>
     </div>
