Correct Answer Count display hinzugefügt

--- a/Struct.html
+++ b/Struct.html
@@ -27,9 +27,8 @@
         <label for="category-selection">Choose a category:</label>
         <select name="category" id="category">
             <option value="mathe">Mathe</option>
-            <option value="physik">Physik</option>
+            <option value="internetTech">Internet Technology</option>
             <option value="generellesWissen">Generelles Wissen</option>
-            <option value="geography">Geopgraphy</option>
         </select>
     </div>
     <button id ="start">Start</button>
@@ -56,6 +55,7 @@
         </div>
         <p id ="text"> Wähle die passende Antwort!</p>
     </div>
+    <div id ="correct-answer-count-display"> </div>
 </main>
 
 
