--- a/Struct.html
+++ b/Struct.html
@@ -26,6 +26,7 @@
     <div id ="category-selection">
         <label for="category-selection">Choose a category:</label>
         <select name="category" id="category">
+            <option value="" disabled selected>Select a category</option>
             <option value="mathe">Mathe</option>
             <option value="internetTech">Internet Technology</option>
             <option value="generellesWissen">Generelles Wissen</option>
